--- a/WebAdminClient/WebAdminClient.csproj
+++ b/WebAdminClient/WebAdminClient.csproj
@@ -132,6 +132,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="EditAllProducts.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -214,6 +215,13 @@
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Backend.cs" />
+    <Compile Include="EditAllProducts.aspx.cs">
+      <DependentUpon>EditAllProducts.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EditAllProducts.aspx.designer.cs">
+      <DependentUpon>EditAllProducts.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ViewAccounting.aspx.cs">
       <DependentUpon>ViewAccounting.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
