--- a/WebAdminClient/WebAdminClient.csproj
+++ b/WebAdminClient/WebAdminClient.csproj
@@ -20,7 +20,7 @@
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
-    <IISExpressUseClassicPipelineMode>true</IISExpressUseClassicPipelineMode>
+    <IISExpressUseClassicPipelineMode>false</IISExpressUseClassicPipelineMode>
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -239,6 +239,16 @@
     <Compile Include="EditAllMails.aspx.designer.cs">
       <DependentUpon>EditAllMails.aspx</DependentUpon>
     </Compile>
+    <Compile Include="StringsLocal.de.Designer.cs">
+      <DependentUpon>StringsLocal.de.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="StringsLocal.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StringsLocal.resx</DependentUpon>
+    </Compile>
     <Compile Include="ViewAccounting.aspx.cs">
       <DependentUpon>ViewAccounting.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -346,6 +356,16 @@
       <Project>{68d6f03c-0cfc-4476-ab47-eade56aace9b}</Project>
       <Name>ConvenienceSystemDataModel</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="StringsLocal.de.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>StringsLocal.de.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StringsLocal.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>StringsLocal.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
