--- a/WebAdminClient/WebAdminClient.csproj
+++ b/WebAdminClient/WebAdminClient.csproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <Content Include="AddProduct.aspx" />
     <Content Include="AddMail.aspx" />
+    <Content Include="AddKeyDate.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -222,6 +223,13 @@
     </Compile>
     <Compile Include="AddMail.aspx.designer.cs">
       <DependentUpon>AddMail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AddKeyDate.aspx.cs">
+      <DependentUpon>AddKeyDate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddKeyDate.aspx.designer.cs">
+      <DependentUpon>AddKeyDate.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Backend.cs" />
