--- a/ConvenienceSystemBackendServer/ConvenienceSystemBackendServer.csproj
+++ b/ConvenienceSystemBackendServer/ConvenienceSystemBackendServer.csproj
@@ -36,6 +36,10 @@
     <Reference Include="MySql.Data.Entity">
       <HintPath>..\..\Visual Studio 2012\mysql-connector-net-6.9.4-noinstall\v4.0\MySql.Data.Entity.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -63,6 +67,9 @@
       <Project>{68D6F03C-0CFC-4476-AB47-EADE56AACE9B}</Project>
       <Name>ConvenienceSystemDataModel</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
