--- a/ConvenienceSystemApp/ConvenienceSystemApp.Droid/Properties/AndroidManifest.xml
+++ b/ConvenienceSystemApp/ConvenienceSystemApp.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.auxua.convenience2">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.auxua.convenience2" android:versionCode="2" android:versionName="1.1">
 	<uses-sdk android:minSdkVersion="15" />
 	<application android:label="Convenience App" android:icon="@drawable/Icon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
