--- a/WebAdminClient/WebAdminClient.csproj
+++ b/WebAdminClient/WebAdminClient.csproj
@@ -117,6 +117,7 @@
     <Content Include="AddProduct.aspx" />
     <Content Include="AddMail.aspx" />
     <Content Include="AddKeyDate.aspx" />
+    <Content Include="ViewAccountingCountSince.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -219,6 +220,13 @@
     </Compile>
     <Compile Include="AddKeyDate.aspx.designer.cs">
       <DependentUpon>AddKeyDate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ViewAccountingCountSince.aspx.cs">
+      <DependentUpon>ViewAccountingCountSince.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ViewAccountingCountSince.aspx.designer.cs">
+      <DependentUpon>ViewAccountingCountSince.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Backend.cs" />
